Rename workspaces -> nodes
