# docs/openapi.yaml
@@ -9,17 +9,17 @@ info:
 servers:
   - url: https://workspace.ci.fairway.app/api/v1
 paths:
-  /workspaces/:
-    description: The workspaces resource
+  /nodes/:
+    description: The nodes resource
     get:
-      summary: Retrieve workspaces
+      summary: Retrieve nodes
       responses:
         '200':
-          description: A list of workspaces (Just identifiers, currently URLs)
+          description: A list of nodes (Just identifiers, currently URLs)
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Workspaces'
+                $ref: '#/components/schemas/Nodes'
         default:
           $ref: '#components/responses/Unexpected'
   /projects/:
@@ -1243,7 +1243,7 @@ components:
           format: iri
         object:
           type: string
-    Workspaces:
+    Nodes:
       type: array
       items:
         type: string
@@ -1251,7 +1251,7 @@ components:
       properties:
         name:
           type: string
-        workspace:
+        node:
           type: string
         label:
           type: string
